--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightGray">#D3D3D3</color>
+
 
     <!-- Добавляем цвета для темы -->
     <color name="colorPrimary">#FF6200EE</color>  <!-- Этот цвет может быть, например, purple_500 -->
