--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,54 @@
                     android:padding="8dp" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+
     </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_afisha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="24dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:clickable="true"
+        android:focusable="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- Изображение афиши -->
+            <ImageView
+                android:id="@+id/afisha_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_afisha_placeholder" />
+
+            <!-- Полупрозрачный черный фон для затемнения картинки -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="#33000000" /> <!-- Черный цвет с прозрачностью 20% -->
+
+            <!-- Заголовок "Афиша" поверх изображения -->
+            <TextView
+                android:id="@+id/afisha_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Афиша"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:gravity="center"
+                android:padding="8dp"
+                android:background="@android:color/transparent"/>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
 
     <!-- TabLayout и ViewPager, скрыты по умолчанию -->
     <com.google.android.material.tabs.TabLayout
