--- a/app/src/main/res/layout/activity_afisha.xml
+++ b/app/src/main/res/layout/activity_afisha.xml
@@ -1,14 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/white"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <!-- WebView для загрузки афиши Яндекс -->
     <WebView
         android:id="@+id/afishaWebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:visibility="gone" /> <!-- WebView по умолчанию скрыт -->
+
+    <!-- Контейнер для кастомной картинки загрузки -->
+    <FrameLayout
+        android:id="@+id/progress_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+        <ImageView
+            android:id="@+id/loading_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_search_afisha" /> <!-- Укажите ваш drawable ресурс -->
+
+    </FrameLayout>
+</RelativeLayout>
