--- a/app/src/main/res/layout/activity_person_detail.xml
+++ b/app/src/main/res/layout/activity_person_detail.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="end">
 
         <!-- Изображение человека -->
         <ImageView
@@ -28,15 +29,28 @@
             android:paddingTop="8dp"
             android:paddingBottom="8dp"/>
 
-        <!-- Описание человека с возможностью прокрутки -->
+        <!-- Описание человека, с возможностью переключения -->
         <TextView
             android:id="@+id/person_detail_description"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textColor="@android:color/black"
             android:lineSpacingExtra="4dp" />
+
+        <!-- Кнопка для переключения описания -->
+        <Button
+            android:id="@+id/button_toggle_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="Показать больше"
+            android:textColor="@android:color/white"
+            android:backgroundTint="#FF6200EE"
+            android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/custom_button_background" />
 
     </LinearLayout>
 </ScrollView>
