--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,34 @@
     android:background="@android:color/white"
     tools:context=".MainActivity">
 
+    <!-- Фрейм для отображения фрагментов -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp" />
+
+    <!-- Панель навигации в футере -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        app:itemIconTint="@color/nav_item_color_state"
+        app:itemTextColor="@color/nav_item_color_state"
+        app:labelVisibilityMode="labeled"
+        app:itemIconSize="24dp"
+        android:background="@android:color/white"
+        app:itemTextAppearanceActive="@style/BottomNavigationActiveText"
+        app:itemTextAppearanceInactive="@style/BottomNavigationInactiveText"/>
+
     <!-- Карточка "Места", занимает 90% ширины с отступами -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_places"
@@ -32,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/orig" />
+                android:src="@drawable/ic_places_static_image" />
             <!-- Полупрозрачный черный фон для затемнения -->
             <View
                 android:layout_width="match_parent"
@@ -65,6 +93,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
+        android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
@@ -156,6 +185,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
+        android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toBottomOf="@id/card_view_region"
         app:layout_constraintStart_toStartOf="parent"
@@ -199,20 +229,5 @@
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- Панель навигации в футере -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/bottom_nav_menu"
-        app:itemIconTint="@color/nav_item_color_state"
-        app:itemTextColor="@color/nav_item_color_state"
-        app:labelVisibilityMode="labeled"
-        app:itemIconSize="24dp"
-        android:background="@android:color/white"
-        app:itemTextAppearanceActive="@style/BottomNavigationActiveText"
-        app:itemTextAppearanceInactive="@style/BottomNavigationInactiveText"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
