--- a/app/src/main/res/layout/activity_person_detail.xml
+++ b/app/src/main/res/layout/activity_person_detail.xml
@@ -16,7 +16,9 @@
             android:id="@+id/person_detail_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:fitsSystemWindows="true"
+            />
 
         <!-- Имя человека -->
         <TextView
@@ -27,6 +29,7 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"
             android:paddingTop="8dp"
+            android:gravity="start"
             android:paddingBottom="8dp"/>
 
         <!-- Описание человека, с возможностью переключения -->
