--- a/app/src/main/res/layout/activity_zemlyaki.xml
+++ b/app/src/main/res/layout/activity_zemlyaki.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/white"> <!-- или @android:color/transparent -->
+    android:background="@android:color/white"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"> <!-- или @android:color/transparent -->
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        app:navigationIconTint="@color/black"
+    android:elevation="4dp"
+        app:navigationContentDescription="Back"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        >
+
+    <!-- Центрируем заголовок с помощью TextView -->
+    <TextView
+        android:id="@+id/toolbar_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Земляки"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black" /> <!-- Черный цвет текста -->
+</androidx.appcompat.widget.Toolbar>
 
     <!-- RecyclerView для списка людей -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_zemlyaki"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_height="wrap_content"
         android:background="@android:color/white" /> <!-- Прозрачный или белый фон -->
 </LinearLayout>
