--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightGray">#D3D3D3</color>
+    <color name="primaryColor">#303f9f</color>
 
     <!-- Синий цвет для активных элементов меню -->
     <color name="blue">#2196F3</color>
