--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -15,6 +15,7 @@
         app:navigationIcon="@drawable/ic_arrow_back"
         app:titleTextColor="@android:color/black"
         android:fitsSystemWindows="true"
+        android:text="Места"
         android:gravity="center"
         android:elevation="4dp"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
