--- a/app/src/main/res/layout/activity_places_list.xml
+++ b/app/src/main/res/layout/activity_places_list.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
+            android:text="Места"
             app:navigationIcon="@drawable/ic_arrow_back"
             app:titleTextColor="@android:color/black"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
